added protips link to DO alert emails

--- a/app/views/notifier/do_shift_starting_email.html.erb
+++ b/app/views/notifier/do_shift_starting_email.html.erb
@@ -21,6 +21,9 @@ http://wiki.bamru.net/index.php/How_to_AHC
 <b>How to Callout:</b><br/>
 http://wiki.bamru.net/index.php/How_to_Callout
 <p><p/>
+<b>Paging Protips for Duty Officers:</b><br/>
+http://wiki.bamru.net/index.php/Paging_Protips
+<p><p/>
 <hr>
 Sent by <%= @opts['author_name']   %><br/>
 <hr>
