--- a/app/views/notifier/do_shift_starting_email.text.erb
+++ b/app/views/notifier/do_shift_starting_email.text.erb
@@ -21,6 +21,9 @@ http://wiki.bamru.net/index.php/How_to_AHC
 How to Callout:
 http://wiki.bamru.net/index.php/How_to_Callout
 
+Paging Protips for Duty Officers:
+http://wiki.bamru.net/index.php/Paging_Protips
+
 -----------------------------------------
 Sent by <%= @opts['author_name']   %>
 -----------------------------------------
