added bounce and unavail labels to message detail

--- a/app/views/history/show.html.erb
+++ b/app/views/history/show.html.erb
@@ -59,7 +59,7 @@
     <div id=x_footer style='font-size: 8pt; text-align: left;'>
       <% if @distribution.has_open_bounce?  %>
         <div style='margin-left: 150px;'>
-          To fix a <span style="background-color: pink;">bounced address</span>, you can:<br/>
+          To fix a <span style="background-color: yellow;">bounced address</span>, you can:<br/>
           <div style="margin-left: 15px;">
            - <b>Ignore</b> the error message (do this for a vacation reply)<br/>
            - <b>Disable</b> the address (to stop sending pages to the address)<br/>
