changed pink footer label to yellow

--- a/app/views/messages/show.html.erb
+++ b/app/views/messages/show.html.erb
@@ -90,7 +90,7 @@
     <div id=x_footer style='font-size: 8pt;'>
       <% if @message.has_open_bounce? %>
         <div style='text-align: center;'>
-          For <span style="background-color: pink;">bounced messages</span>, check the <b>history</b> to find out what is failing.
+          For <span style="background-color: yellow;">bounced messages</span>, check the <b>history</b> to find out what is failing.
         </div>
       <% end %>
       <table width=100% style='font-size: 8pt;'>
