added oot notification

--- a/app/views/members/index.html.erb
+++ b/app/views/members/index.html.erb
@@ -89,6 +89,7 @@
               <td><b>To:</b> <span id="addr_count">0 addresses</span></td>
               <td align=right><b>From:</b> <%= current_member.short_name %></td>
             </tr>
+            <tr id='clearoot' style="background: #fef; font-size: 10px;"><td style='padding-left: 4px;' colspan=2>some recipients are unavailable!<span style='margin-right: 5px; float: right'><a href="#" onclick='clearOOT();'>clear unavail</a></span></td></tr>
           </table>
 
           <div style="line-height: 10px; margin-bottom: 0;">
