fixed rsvp update bug

--- a/app/views/messages/show.html.erb
+++ b/app/views/messages/show.html.erb
@@ -56,7 +56,7 @@
 
       <% if @message.distributions.count > 4 %>
         <div style='background-color: lightgray; padding: 3px 25px 3px 108px;'>
-          <div style='float:right; text-align: right; margin-top: 4px'>
+          <div style='float:right; text-align: right;'>
             <a href="http://wiki.bamru.net/index.php/Paging_Protips" target="_blank">help</a>
           </div>
           <div style='text-align: left;'>
