--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -43,7 +43,7 @@
   <% if request.host.include?("ekel") %>
     <div style='text-align: center;'>
 
-      <div class="debug"><%= raw debug_footer_text %> - <a href="/home/testrake">TEST RAKE</a></div>
+      <div class="debug"><%= raw debug_footer_text %> <a href="/home/testrake">test rake</a></div>
     </div>
   <% end %>
 </div>
