--- a/app/views/members/_smso.html.erb
+++ b/app/views/members/_smso.html.erb
@@ -1,20 +1,8 @@
-<div class="note graybg">
+<div class="note graybg" style='padding:5px;'>
 
   <B>BAMRU Status Line</B><br>650-858-4618<br>800-888-6423 x8584618<br><br>
   <B>San Mateo County</B><br>Status Line: 650-599-2162<br>Switchboard: 650-363-4000<br>24 Hour Comm: 650-363-4911<br><br>
 
-  <B>Lt. Ed Barberini</B> OES 1<br>W:650-599-1295&nbsp;&nbsp;P:650-377-9423<br><br>
-  <B>Sgt. Joe Sheridan</B> OES 2<br>W:650-363-4458&nbsp;&nbsp;P:650-746-0608&nbsp;&nbsp;M:650-740-9100<br><br>
-  <B>Bill O'Callahan</B> OES 3<br>W:650-599-1294&nbsp;&nbsp;P:650-377-6502<br><br>
-
-  <B>Dep. Jim Farrell</B> OES 11<br>W:650-740-2881&nbsp;&nbsp;P:650-363-4655&nbsp;&nbsp;M:650-524-8012<br><br>
-  <B>Sgt. Ted Berndtson</B> OES 13<br>W:650-599-7400&nbsp;&nbsp;P:650-377-8162<br><br>
-  <B>Dep. Sam Azar</B> OES 14<br>W:650-599-1774&nbsp;&nbsp;P:415-204-4688<br><br>
-
-  <B>Dep. Owen Yoch</B> OES 15<br>W:650-363-4537&nbsp;&nbsp;P:650-524-8089<br><br>
-  <B>Dep. Steve Pettit</B> OES 18<br>W:650-599-7400&nbsp;&nbsp;P:650-997-6656<br><br>
-  <B>Dan Bennett</B> OES 99<br>W:650-363-4012&nbsp;&nbsp;P:650-524-8098&nbsp;&nbsp;M:650-245-2686<br>
-
-  <a href="mailto:dgbennett@co.sanmateo.ca.us">dgbennett@co.sanmateo.ca.us</a><br><br>
+  <a target="_blank" href="http://wiki.bamru.net/index.php/SMSO_Contacts">SMSO Contacts</a>
 
 </div>
