--- a/app/views/members/index.html.erb
+++ b/app/views/members/index.html.erb
@@ -25,26 +25,9 @@
           </td>
         </tr></table>
         <% cache("member_index_table-#{@fragment_type}") do %>
-          <table id="myTable" class="tablesorter" style="margin-top: 0;">
-            <thead>
-            <tr>
-              <th>Role</th>
-              <th align=center><img id='pager_icon' src="/images/page.gif" border=0></th>
-              <th align=center><img id='email_icon' src="/images/mail.gif" border=0></th>
-              <th>Name</th>
-            </tr>
-            </thead>
-            <tbody>
-            <% @members.each do |m| %>
-              <tr<%= roster_oot_class(m) %>>
-                <td><%= m.full_roles %></td>
-                <%= raw phone_checkbox(m) %>
-                <%= raw email_checkbox(m) %>
-                <td><a href="/members/<%= m.id %>"><%= m.full_name %></a> <%= raw roster_oot_label(m) %></td>
-              </tr>
-            <% end %>
-            </tbody>
-          </table>
+
+          <%= render :partial => 'member_table' %>
+
         <% end %>
       </div>
       <div id=x_right_col>
@@ -74,53 +57,8 @@
           </tr>
         </table>
 
-        <div style="padding: 4px; margin-top:10px; margin-bottom:10px; background-color:lightblue;">
+        <%= render :partial => 'page_form' %>
 
-          <table width=100%>
-            <tr>
-              <td style='font-size: 12px;'>
-                <b>Send SMS / eMail</b>
-              </td>
-              <td align=right style='font-size: 10px;'><a href="http://wiki.bamru.net/index.php/Sending_Pages" target="_blank">help</a></td>
-            </tr>
-          </table>
-          <table width=100%>
-            <tr>
-              <td><b>To:</b> <span id="addr_count">0 addresses</span></td>
-              <td align=right><b>From:</b> <%= current_member.short_name %></td>
-            </tr>
-            <tr id='clearoot' style="background: #fef; font-size: 10px;"><td style='padding-left: 4px;' colspan=2>some recipients are unavailable!<span style='margin-right: 5px; float: right'><a href="#" onclick='clearOOT();'>clear unavail</a></span></td></tr>
-          </table>
-
-          <div style="line-height: 10px; margin-bottom: 0;">
-            <textarea id="message_area" name="message[text]" rows="4" style="width: 290px; padding-bottom: 0; margin-bottom: 0;"></textarea>
-
-            <table width=100% style='font-size: 8pt; margin-bottom: 0; padding-bottom: 0;'>
-              <tr>
-                <td>
-                  RSVP <%= raw rsvp_select %>
-                </td>
-                <td align=right>
-                  <span id="chars_remaining">132</span> characters left
-                </td>
-              </tr>
-            </table>
-
-          </div>
-          <div id="rsvp_display" style='padding-top: 0px; margin-top: 0px; font-size: 10px; padding-right: 4px; padding-left: 4px; background-color: lightcyan;'></div>
-          <div style="font-size: 10px; margin-bottom: 0px;">
-            <table width=100% style='margin-top: 0px; padding-top: 0px;'>
-              <tr style='margin-top: 0px; padding-top: 0px;'>
-                <td style='font-size: 8pt;'>
-                  <a href='#' id="preview_link">preview</a>
-                </td>
-                <td valign=top align=right>
-                  <input style='width: 60px;' type="submit" value="Send"/>
-                </td>
-                </tr>
-            </table>
-          </div>
-        </div>
         <div style="font-size: 10px;">
           <i>
             Last message sent <%= Message.last.created_at.strftime("%m-%d %H:%M") unless Message.last.blank? %>
