added page alert message

--- a/app/views/members/_page_form.html.erb
+++ b/app/views/members/_page_form.html.erb
@@ -39,7 +39,7 @@
           <a href='#' id="preview_link">preview</a>
         </td>
         <td valign=top align=right>
-          <input style='width: 60px;' type="submit" value="Send"/>
+          <input id='sendbutton' style='width: 60px;' type="submit" value="Send"/>
         </td>
       </tr>
     </table>
