dropped DO from mobile nav

--- a/app/views/mobile3/index.html.erb
+++ b/app/views/mobile3/index.html.erb
@@ -38,10 +38,11 @@
   <div id='content'>
 
     <div id='home' class='page'>
-      <div class="navbox">
-        <a class='lnav' href="#members" >Members</a>
-        <a class='rnav' href="#members/<%=@do_id%>">DO:<%= @do_name %></a>
-      </div>
+      <!--<div class="navbox">-->
+        <!--<a class='lnav' href="#members" >Members</a>-->
+        <!--<a class='rnav' href="#members/<%=@do_id%>">DO:<%= @do_name %></a>-->
+      <!--</div>-->
+      <a class='nav' href="#members"    >Members</a>
       <a class='nav' href="#status"     >Status Lines</a>
       <a class='nav' href="#page_select">Send Page</a>
       <a class='nav' href="#messages"   >Unit Message Log</a>
