put margin around footer

--- a/app/views/unauth_rsvps/show.html.erb
+++ b/app/views/unauth_rsvps/show.html.erb
@@ -44,7 +44,9 @@
         </table>
 
         <p></p>
-	<%= link_to "Show details (requires login)", "/rsvps/#{@dist.id}" %>
+        <div style='margin 20px;'>
+      	<%= link_to "Show details (requires login)", "/rsvps/#{@dist.id}" %>
+        </div>
         <br/>
 
       <% end %>
