fixed display glitch

--- a/app/views/unauth_rsvps/show.html.erb
+++ b/app/views/unauth_rsvps/show.html.erb
@@ -44,7 +44,7 @@
         </table>
 
         <p></p>
-        <div style='margin 20px;'>
+        <div style='margin: 20px;'>
       	<%= link_to "Show details (requires login)", "/rsvps/#{@dist.id}" %>
         </div>
         <br/>
