--- a/app/views/unauth_rsvps/show.html.erb
+++ b/app/views/unauth_rsvps/show.html.erb
@@ -10,45 +10,55 @@
       <% else %>
 
         <p></p>
-        <table>
-          <tr>
-            <td align=right><b>RSVP:</b></td>
-            <td><%= @rsvp.prompt %></td>
-          </tr>
-          <tr>
-            <td> </td>
-            <td>
-              <div style='margin: 20px;'>
-                Your current response is <b><%= raw rsvp_display_answer(@dist).chomp %></b>
-                <% if @dist.rsvp_answer.try(:downcase) == "yes" %>
-                  <%= @rsvp.yes_prompt %>
+          <table>
+            <tr>
+              <td align=right width=150><b>Message #<%= @message.id %>:</b></td>
+              <td><%= @message.text %></td>
+            </tr>
+            <tr>
+              <td align=right width=150><b>Sent:</b></td>
+              <td>from <%= @message.author.short_name %> to <%= @dist.member.short_name %> at <%= @message.created_at.strftime("%y-%m-%d %H:%M:%S") %></td>
+            </tr>
+            <tr>
+              <td align=right><b>RSVP:</b></td>
+              <td><%= @rsvp.prompt %></td>
+            </tr>
+            <tr>
+              <td> </td>
+              <td>
+                <div style='margin: 20px;'>
+                  Your current response is <b><%= raw rsvp_display_answer(@dist).chomp.upcase %>:</b>
+                  <% if @dist.rsvp_answer.try(:downcase) == "yes" %>
+                      <%= @rsvp.yes_prompt %>
+                  <% end %>
+                  <% if @dist.rsvp_answer.try(:downcase) == "no" %>
+                      <%= @rsvp.no_prompt %>
+                  <% end %>
+                </div>
+              </td>
+            </tr>
+            <tr>
+              <td>
+              </td>
+              <td>
+                <% if @dist.rsvp_answer != "Yes" %>
+                    <%= link_to "Change your response to YES", "/unauth_rsvps/#{@token}?response=yes" %>: <%= @rsvp.yes_prompt %><br/>
                 <% end %>
-                <% if @dist.rsvp_answer.try(:downcase) == "no" %>
-                  <%= @rsvp.no_prompt %>
+                <% if @dist.rsvp_answer != "No" %>
+                    <%= link_to "Change your response to NO", "/unauth_rsvps/#{@token}?response=no"  %>: <%= @rsvp.no_prompt %><br/>
                 <% end %>
-              </div>
-            </td>
-          </tr>
-          <tr>
-            <td>
-            </td>
-            <td>
-              <% if @dist.rsvp_answer != "Yes" %>
-                <%= link_to "Change your response to YES", "/unauth_rsvps/#{@token}?response=yes" %>: <%= @rsvp.yes_prompt %><br/>
-              <% end %>
-              <% if @dist.rsvp_answer != "No" %>
-                <%= link_to "Change your response to NO", "/unauth_rsvps/#{@token}?response=no"  %>: <%= @rsvp.no_prompt %><br/>
-              <% end %>
-            </td>
-          </tr>
-        </table>
+              </td>
+            </tr>
+            <tr>
+              <td></td>
+              <td>
+                <div style='margin-top: 20px; margin-bottom: 20px;'>
+                  <%= link_to "Show details (requires login)", "/rsvps/#{@dist.id}" %>
+                </div>
+              </td>
+            </tr>
 
-        <p></p>
-        <div style='margin: 20px;'>
-      	<%= link_to "Show details (requires login)", "/rsvps/#{@dist.id}" %>
-        </div>
-        <br/>
-
+          </table>
       <% end %>
 
     </div>
