--- a/app/views/members/edit.html.erb
+++ b/app/views/members/edit.html.erb
@@ -83,16 +83,18 @@
       <p></p><b>Password</b>
       <div id=password>
         <span class=plabel>Password: </span>
-        <%= f.password_field :password, :size => 13 %><br/>
+        <%= f.password_field :password, :size => 13, 'autocomplete' => 'off' %><br/>
         <span class=plabel>Confirmation: </span>
         <%= f.password_field :password_confirmation, :size => 13 %>
       </div>
-      <p></p><b>Ham & V9</b>
+      <p></p><b>Ham, V9, Driver's License</b>
       <div id=ham_v9>
         <span class=hlabel>Ham: </span>
-        <%= f.text_field :ham, :size => 6 %><br/>
+        <%= f.text_field :ham, :size => 8 %><br/>
         <span class=hlabel> V9: </span>
-        <%= f.text_field :v9, :size => 6 %><p/>
+        <%= f.text_field :v9, :size => 8 %><br/>
+        <span class=hlabel> DL: </span>
+        <%= f.text_field :dl, :size => 8 %><p/>
       </div>
       <p/>
     <% end %>
