interum events work

--- a/app/views/home/labs.html.erb
+++ b/app/views/home/labs.html.erb
@@ -3,6 +3,17 @@
 These prototypes are for learning new software tools and techniques.  They are not feature-complete.<br/>
 Let Andy know if you spot problems or have ideas for improvement.
 <p></p>
+<h3 width=100% style='background: grey; padding: 3px; color: white;'>Events</h3>
+Information sharing for BAMRU Events (meetings, trainings, operations).
+
+Meetings and trainings can be scheduled, and calendar data is
+exported to our public website and Google calendars.
+
+Operations can be tracked, and the DO can record member checkin/checkout times.
+SMSO reports and summary statics are generated.
+
+<b><%= link_to events_url, '/events'  %></b>
+<p></p>
 <h3 width=100% style='background: grey; padding: 3px; color: white;'>Mobile</h3>
 <table>
   <tr>
