--- a/app/views/events/_common.html.erb
+++ b/app/views/events/_common.html.erb
@@ -1,26 +1,34 @@
-<style>
-  .cksel {
-    margin-left: 1px;
-    vertical-align: -2px;
-  }
-  .ckpost {
-    margin-right: 14px;
-  }
-  .date_align {
-      margin-right: 16px;
-  }
-</style>
+<%= javascript_include_tag "events/all_events" %>
 
-<div id="x_single_col">
+<div id=x_container>
+  <div id=x_wide_body>
+    <div id=x_header>
+      <table width=100%>
+        <tr>
+          <td id="header_left" align=left>
+            <b>Events</b>
+          </td>
+          <td id="header_center" align=center>
+          </td>
+          <td id="header_right" align=right>
+          </td>
+        </tr>
+      </table>
+    </div>
 
-  <div class="pane ui-layout-west"><%= render :partial => 'table' %>
+    <div id="x_single_col">
+
+      <div id="ui-table" class="pane ui-layout-west">
+      </div>
+
+      <div id="ui-content" class="pane ui-layout-center">
+        <%= render :partial => @action %>
+      </div>
+
+    </div>
+
+    <div id=x_footer style="font-size: 10pt;">
+    </div>
 
   </div>
-
-  <div class="pane ui-layout-center">
-
-    <%= render :partial => @action %>
-
-  </div>
-
 </div>
