--- a/app/views/events/_index.html.erb
+++ b/app/views/events/_index.html.erb
@@ -1,8 +1,12 @@
-<h3>Overview</h3>
+<div data-pjax-container>
 
-Use the Event pages to update the BAMRU calendar.<p></p>
+  <h3>Overview</h3>
 
-There are <b><%= Event.count %></b> events in our database.
-(<%= Event.meetings.count %> meetings, <%= Event.trainings.count %> trainings,
-<%= Event.operations.count %> operations, <%= Event.specials.count %> specials)
-<p></p>
+  Use the Event pages to update the BAMRU calendar.<p></p>
+
+  There are <b><%= Event.count %></b> events in our database.
+  (<%= Event.meetings.count %> meetings, <%= Event.trainings.count %> trainings,
+  <%= Event.operations.count %> operations, <%= Event.specials.count %> specials)
+  <p></p>
+
+</div>
