--- a/app/views/do_planner/index.html.erb
+++ b/app/views/do_planner/index.html.erb
@@ -5,16 +5,22 @@
   #dodata th {
     width: 30px;
   }
-  .status:hover {
+  .status:hover, .mouseover_hdr, .mouseover_hdr a {
     border-color: blue;
-    border-style: double;
+    color: blue;
+    border-width: 1px;
     cursor: pointer;
   }
 
-  .green, .green_label { background: #b8edab; }
-  .blue, .blue_label   { background: #caf0f0; }
-  .pink, .pink_label   { background: #ffdfe4; }
+  .green, .green_label  { background: #b8edab; }
+  .blue,  .blue_label   { background: #f9ffad; }
+  .pink,  .pink_label   { background: #ffdfe4; }
   .padded { padding-left: 3px; padding-right: 3px;}
+
+  .memtag {
+    padding-left: 3px;
+    padding-right: 3px;
+  }
 
 
 </style>
