--- a/config/deploy/shared/packages/templates/nginx_passenger.erb
+++ b/config/deploy/shared/packages/templates/nginx_passenger.erb
@@ -6,9 +6,16 @@ server {
   server_name <%= vhost_names.join(' ') %>;
   client_max_body_size 20M;
   root <%= deploy_to %>/current/public;
+  if (-f $document_root/system/maintenance.html) {
+    return 503;
+  }
   error_page 404 /404.html;
   error_page 422 /422.html;
-  error_page 500 502 503 504 /500.html;
+  error_page 500 502 504 /500.html;
+  error_page 503 @503;
+  location @503 {
+    rewrite ^(.*)$ /system/maintenance.html break;
+  }
   location / {
     proxy_pass http://127.0.0.1:<%= web_port %>;
     proxy_set_header Host $host;
