updated nginx_passenger config

--- a/config/deploy/shared/packages/templates/nginx_passenger.erb
+++ b/config/deploy/shared/packages/templates/nginx_passenger.erb
@@ -1,5 +1,6 @@
 # nginx_passenger
 # this file created by Capistrano
+# generated <%= Time.now.strftime("%Y-%M-%D %h:%m") %>
 
 server {
   listen 80;
