updated maintenance page

--- a/app/views/layouts/maintenance.html.erb
+++ b/app/views/layouts/maintenance.html.erb
@@ -1,6 +1,6 @@
 <h1>Site Maintenance</h1>
 <p>
-  The site is down for <%= reason ? reason : "maintenance" %>
+  BAMRU.net is down for <%= reason ? reason : "maintenance" %>
   as of <%= Time.now.strftime("%H:%M %Z") %>.
 </p>
 <p>
@@ -8,5 +8,5 @@
   <%= deadline ? "by #{deadline}" : "shortly" %>.
 </p>
 <p>
-  Please email Andy if you need to get in touch.
+  Questions/Issues?  Contact Andy ( 650-823-0836 / andy at r210.com )
 </p>
