--- a/app/views/rsvp_templates/index.html.erb
+++ b/app/views/rsvp_templates/index.html.erb
@@ -2,6 +2,18 @@
 
 <%= csrf_meta_tag %>
 
+<style>
+  .rsvpLi {
+    list-style-type: none;
+    border-top: white;
+    border-left: white;
+    border-right: white;
+    border-bottom: lightgray;
+    border-style: solid;
+    border-width:  1px;
+  }
+</style>
+
 <div id=x_container>
   <div id=x_body>
     <div id=x_header>
